# decpki

./: .gitignore  CLAUDE.md  LICENSE  README.md  decentralized-pki-design.md  demo.sh  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
bff/: bundle_cache.py  cose.py  enrolment.py  main.py  requirements.txt  session.py
bff/tests/: test_api_me.py  test_cose.py  test_enrolment.py  test_session.py  test_sessions.py  test_sessions_persist.py
browser/: .gitignore  README.md  build.mjs  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.js
browser/demo/: index.html  login.html  register.html  server.mjs  sessions.html
browser/src/: bundle.js  cbor-canonical.js  crypto.js  errors.js  index.d.ts  index.js  registration.js  session.js  sessions.js  storage.js
browser/sw/: decpki-sw.js
browser/tests/: setup.js
cli/: decpki_cli.py  enrol_sign.py
demo/: .dockerignore  Dockerfile  client-entrypoint.sh  docker-compose.yml  server-entrypoint.sh
scripts/: _common.sh  promote-enrolment.sh  setup-validators.sh  start-demo.sh
specs/001-bundle-format-validator-quorum/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-docker-compose-offline-demo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-browser-offline-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
(+87 files in other folders)
